force-app/main/default/objects/IB_Metric_Ranking__c/IB_Metric_Ranking__c.object-meta.xml
<CustomObject>
    <label>IB Metric Ranking</label>
    <nameField>
        <displayFormat>IB-MR-{0000}</displayFormat>
        <label>IB Metric Ranking #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Metric Rankings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>