force-app/main/default/objects/IB_Metric_Ranking__c/fields/MostFrequentlyRunRule__c.field-meta.xml
<CustomField>
    <fullName>MostFrequentlyRunRule__c</fullName>
    <label>MostFrequentlyRunRule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alert Database Insert Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>