force-app/main/default/objects/IB_Metric_Ranking__c/fields/TopTriggeredEvent_Name__c.field-meta.xml
<CustomField>
    <fullName>TopTriggeredEvent_Name__c</fullName>
    <label>TopTriggeredEvent Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event for rule &apos;Copy On Insert&apos;</fullName>
            </value>
            <value>
                <fullName>Event for rule &apos;Cycle Test Rule A to B&apos;</fullName>
            </value>
            <value>
                <fullName>Event for rule &apos;Cycle Test Rule B to A&apos;</fullName>
            </value>
            <value>
                <fullName>Event for rule &apos;join with update&apos;</fullName>
            </value>
            <value>
                <fullName>Event for rule &apos;update&apos;</fullName>
            </value>
            <value>
                <fullName>HarnessSpacesTest@Qawin1.SpacesTest (Insert)</fullName>
            </value>
            <value>
                <fullName>Mirror HarnessDatatypesSrc.[HARNESSDATATYPESSRC].TABL (UPD)</fullName>
            </value>
            <value>
                <fullName>Mirror HarnessDatatypesSrc.[dbo].tab (INS)</fullName>
            </value>
            <value>
                <fullName>Mirror HarnessDatatypesSrc.[dbo].tab (UPD)</fullName>
            </value>
            <value>
                <fullName>Mirror HarnessDatatypesSrc.tab (UPD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>